--- a/angular/home/home.html
+++ b/angular/home/home.html
@@ -15,13 +15,11 @@
 						<h2 class="mdl-card__title-text">Upload</h2>
 					</div>
 					<div class="mdl-card__supporting-text">
-						Upload the text data through a text file. The text file should have a .txt extension
+						Upload the input data through a text file. The text file should have a .txt extension
 						and the each graph should be placed on a new line.
 					</div>
 					<div class="mdl-card__actions mdl-card--border">
-						<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-							Upload file
-						</button>
+						<input type="file" read-file="home.showResults($fileContent)"/>
 					</div>
 				</div>
 			</div>
