implemented dialog for results display

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 		<!-- build:css /assets/css/vendor.css -->
 		<!-- bower:css -->
 		<link rel="stylesheet" href="/assets/components/material-design-lite/material.min.css">
+		<link rel="stylesheet" href="/assets/components/angular-material/angular-material.css">
 		<!-- endinject -->
 		<!-- endbuild -->
 
@@ -27,6 +28,10 @@
 		<script src="/assets/components/angular/angular.js"></script>
 		<script src="/assets/components/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="/assets/components/material-design-lite/material.min.js"></script>
+		<script src="/assets/components/angular-animate/angular-animate.js"></script>
+		<script src="/assets/components/angular-aria/angular-aria.js"></script>
+		<script src="/assets/components/angular-messages/angular-messages.js"></script>
+		<script src="/assets/components/angular-material/angular-material.js"></script>
 		<!-- endinject -->
 		<!-- endbuild -->
 
