--- a/angular/home/home.html
+++ b/angular/home/home.html
@@ -15,8 +15,8 @@
 						<h2 class="mdl-card__title-text">Upload</h2>
 					</div>
 					<div class="mdl-card__supporting-text">
-						Upload the input data through a text file. The text file should have a .txt extension
-						and the each graph should be placed on a new line.
+						Upload the input data through a text file having a .txt extension
+						and each graph should be placed on a new line.
 					</div>
 					<div class="mdl-card__actions mdl-card--border">
 						<input type="file" read-file="home.showResults($fileContent)"/>
