added the node & graph operations

--- a/angular/home/home.html
+++ b/angular/home/home.html
@@ -16,7 +16,7 @@
 					</div>
 					<div class="mdl-card__supporting-text">
 						Upload the input data through a text file having a .txt extension
-						and each graph should be placed on a new line.
+						and each graph should be separated by a comma.
 					</div>
 					<div class="mdl-card__actions mdl-card--border">
 						<input type="file" read-file="home.showResults($fileContent)"/>
