--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 		<script src="/assets/components/angular-animate/angular-animate.js"></script>
 		<script src="/assets/components/angular-aria/angular-aria.js"></script>
 		<script src="/assets/components/angular-messages/angular-messages.js"></script>
+		<script src="/assets/components/angular-mocks/angular-mocks.js"></script>
 		<script src="/assets/components/angular-material/angular-material.js"></script>
 		<!-- endinject -->
 		<!-- endbuild -->
